--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="grid-container">
-      <p class="display display--content"></p>
+      <p class="display display--content">0</p>
       <button class="num num--0">0</button>
       <button class="num num--1">1</button>
       <button class="num num--2">2</button>
