--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
   <body>
     <div class="grid-container">
       <p class="display display--content">0</p>
-      <button class="num num--0">0</button>
-      <button class="num num--1">1</button>
-      <button class="num num--2">2</button>
-      <button class="num num--3">3</button>
-      <button class="num num--4">4</button>
-      <button class="num num--5">5</button>
-      <button class="num num--6">6</button>
-      <button class="num num--7">7</button>
-      <button class="num num--8">8</button>
-      <button class="num num--9">9</button>
-      <button id="dot" class="num dot">.</button>
-      <button class="operator add">+</button>
-      <button class="operator subtract">–</button>
-      <button class="operator multiply">*</button>
-      <button class="operator divide">÷</button>
-      <button class="equal">=</button>
-      <button type="reset" class="C">Clear</button>
+      <button class="num num--0" data-num="0">0</button>
+      <button class="num num--1" data-num="1">1</button>
+      <button class="num num--2" data-num="2">2</button>
+      <button class="num num--3" data-num="3">3</button>
+      <button class="num num--4" data-num="4">4</button>
+      <button class="num num--5" data-num="5">5</button>
+      <button class="num num--6" data-num="6">6</button>
+      <button class="num num--7" data-num="7">7</button>
+      <button class="num num--8" data-num="8">8</button>
+      <button class="num num--9" data-num="9">9</button>
+      <button id="dot" class="num dot" data-num=".">.</button>
+      <button class="operator add" data-op="+">+</button>
+      <button class="operator subtract" data-op="-">–</button>
+      <button class="operator multiply" data-op="*">*</button>
+      <button class="operator divide" data-op="/">÷</button>
+      <button class="equal" data-equal="=">=</button>
+      <button type="reset" class="C" data-clear="clear">Clear</button>
     </div>
     <script src="script.js"></script>
   </body>
